--- a/cv.tex
+++ b/cv.tex
@@ -6,7 +6,7 @@
 \setmobile{\textbf{Mobile:} +84 702 907 154}
 \setaddress{\textbf{Address:} District 7, HCM City}
 \setmail{\textbf{Email:} truonggiangit793@gmail.com}
-\setposition{\textbf{Position:} Web front-end developer}
+\setposition{\textbf{Position:} Web developer} %ignored
 \setgithubaccount{https://github.com/truonggiangit793}
 \setfacebookaccount{https://fb.com/truonggiangit793}
 \setthemecolor{teal}
@@ -16,8 +16,8 @@
 \vspace{1ex}
 
 %Summary
-\addblocktext{Summary}{%
-I am a slightly skilled front-end web developer with a strong proficiency in VueJS and other frameworks like ReactJS, I am excited to apply for a challenging and rewarding position that allows me to apply my skills and knowledge in web developer. My experience is also in both front-end and back-end development, I possess a solid foundation in web development and a creative eye for designing visually appealing websites. I have actively sought opportunities to enhance my skills and stay up-to-date with the latest industry trends, and I am looking forward to the opportunity to contribute to an organization's success.
+\addblocktext{Summary}{
+I am excited to apply for a challenging and rewarding position that allows me to apply my skills and knowledge in web developer. My experience is also in both web front-end and web back-end development, I possess a solid foundation in web development and a creative eye for designing visually appealing websites. I have actively sought opportunities to enhance my skills and stay up-to-date with the latest industry trends, and I am looking forward to the opportunity to contribute to an organization's success.
 }
 
 %Education
@@ -44,7 +44,7 @@ I am a slightly skilled front-end web developer with a strong proficiency in Vue
 %Skills
 \section{Skills}
 %
-\newcommand{\skillone}{\createskill{Library \& Frameworks:}{ Vue \cpshalf React \cpshalf React Native \cpshalf JQuery \cpshalf Tailwind \cpshalf Bootstrap }}
+\newcommand{\skillone}{\createskill{Library \& Frameworks:}{ VueJS \cpshalf ReactJS \cpshalf ExpressJS \cpshalf React Native \cpshalf JQuery \cpshalf Tailwind \cpshalf Bootstrap }}
 %
 \newcommand{\skilltwo}{\createskill{Programming languages:}{ JavaScript \cpshalf Python \cpshalf PHP \cpshalf C\# \cpshalf Java }}
 %
@@ -63,7 +63,7 @@ I am a slightly skilled front-end web developer with a strong proficiency in Vue
 \section{Projects}
 %
 \datedexperience{Noiz Music Player}{}
-\explanationdetail{\coloredbullet\ Git repo: https://github.com/truonggiangit793/noiz-music}
+\explanationdetail{\coloredbullet\ Git repo: \href{https://github.com/truonggiangit793/noiz-music}{https://github.com/truonggiangit793/noiz-music}}
 \explanationdetail{\coloredbullet\ Description: This is an entertainment website for music lovers. At Noiz Music, I believe that music is not just a form of entertainment but a way of life. Song library is based on the renowned ZingMp3 API, it's easy for you to discover new artists, create playlists, and share your favorite tracks with friends and family. Whether you're into pop, rock, hip hop, or classical music...}
 \explanationdetail{\coloredbullet\ Team size: only me.}
 \explanationdetail{\coloredbullet\ Technologies: Express.js for API, Vue.js for front-end, Docker.}
@@ -75,32 +75,32 @@ I am a slightly skilled front-end web developer with a strong proficiency in Vue
 \section{Projects}
 %
 \datedexperience{Zing MP3 Clone}{}
-\explanationdetail{\coloredbullet\ Git repo: https://github.com/truonggiangit793/zingmp3-clone}
+\explanationdetail{\coloredbullet\ Git repo: \href{https://github.com/truonggiangit793/zingmp3-clone}{https://github.com/truonggiangit793/zingmp3-clone}}
 \explanationdetail{\coloredbullet\ Description: ZingMp3 Web page cloned.}
 \explanationdetail{\coloredbullet\ Team size: only me.}
 \explanationdetail{\coloredbullet\ Technologies: Express.js for API, Vue.js for front-end, Docker.}
 %
 \datedexperience{Point of Sale - Store system}{}
-\explanationdetail{\coloredbullet\ Git repo: https://github.com/truonggiangit793/store-system}
+\explanationdetail{\coloredbullet\ Git repo: \href{https://github.com/truonggiangit793/store-system}{https://github.com/truonggiangit793/store-system}}
 \explanationdetail{\coloredbullet\ Description: This project explores the application of IT in retail business through the analysis and design of a retail store system. This innovative approach promises convenience, efficiency, and improved management, while enhancing our vocational skills and addressing common challenges.}
 \explanationdetail{\coloredbullet\ Team size: 2.}
 \explanationdetail{\coloredbullet\ My responsibilities: Developer, UI design, optimize code, bug fixing.}
 \explanationdetail{\coloredbullet\ Technologies: Express.js for API, Vue.js for front-end, MongoDB for database.}
 %
 \datedexperience{Facebook AI Chatbot - Webhook}{}
-\explanationdetail{\coloredbullet\ Git repo: https://github.com/truonggiangit793/facebook-chatbot}
+\explanationdetail{\coloredbullet\ Git repo: \href{https://github.com/truonggiangit793/facebook-chatbot}{https://github.com/truonggiangit793/facebook-chatbot}}
 \explanationdetail{\coloredbullet\ Description: This project used for building a facebook chatbot. By providing OpenAI API key, this webhook can response any prompt by user then send the anwser to facebook via Messenger.}
 \explanationdetail{\coloredbullet\ Team size: only me.}
 \explanationdetail{\coloredbullet\ Technologies: Express.js for API, OpenAI API.}
 %
 \datedexperience{Youtube clean mode - Chrome extension}{}
-\explanationdetail{\coloredbullet\ Git repo: https://github.com/truonggiangit793/youtube-clean-mode-extension}
+\explanationdetail{\coloredbullet\ Git repo: \href{https://github.com/truonggiangit793/youtube-clean-mode-extension}{https://github.com/truonggiangit793/youtube-clean-mode-extension}}
 \explanationdetail{\coloredbullet\ Description: This extension allows users to customize their viewing experience by hiding certain elements of the page. Specifically, this extension offers the ability to hide the title of the current video, the controller, and suggested videos, as well as a theater mode that highlights the video frame by blurring the background.}
 \explanationdetail{\coloredbullet\ Team size: only me.}
 %
 \datedexperience{Barcode scanner - Mobile application}{}
-\explanationdetail{\coloredbullet\ Git repo for web dasboard: https://github.com/truonggiangit793/mobile-admin-module}
-\explanationdetail{\coloredbullet\ Git repo for React native: https://github.com/truonggiangit793/mobile-app-final}
+\explanationdetail{\coloredbullet\ Git repo for web dasboard: \href{https://github.com/truonggiangit793/mobile-admin-module}{https://github.com/truonggiangit793/mobile-admin-module}}
+\explanationdetail{\coloredbullet\ Git repo for React native: \href{https://github.com/truonggiangit793/mobile-app-final}{https://github.com/truonggiangit793/mobile-app-final}}
 \explanationdetail{\coloredbullet\ Description: The application of barcode scanning in managing near-expiry products at convenience stores: Instead of manually recording barcode numbers, expiration dates, and quantities, our app allows employees to scan product barcodes using their phone's camera. The system displays the product information, and employees simply input expiration dates and quantities, saving time and eliminating the need for manual data entry. Additionally, store managers can easily download an Excel file without the tedious task of manually inputting data.}
 \explanationdetail{\coloredbullet\ Team size: only me.}
 \explanationdetail{\coloredbullet\ Technologies: Express.js for API, MongoDB for database, React Native for mobile app.}
