--- a/cv.tex
+++ b/cv.tex
@@ -44,9 +44,9 @@ I am excited to apply for a challenging and rewarding position that allows me to
 %Skills
 \section{Skills}
 %
-\newcommand{\skillone}{\createskill{Library \& Frameworks:}{ VueJS \cpshalf ReactJS \cpshalf ExpressJS \cpshalf React Native \cpshalf JQuery \cpshalf Tailwind \cpshalf Bootstrap }}
+\newcommand{\skillone}{\createskill{Programming languages:}{ JavaScript \cpshalf Python \cpshalf PHP \cpshalf C\# \cpshalf Java }}
 %
-\newcommand{\skilltwo}{\createskill{Programming languages:}{ JavaScript \cpshalf Python \cpshalf PHP \cpshalf C\# \cpshalf Java }}
+\newcommand{\skilltwo}{\createskill{Library \& Frameworks:}{ VueJS \cpshalf ReactJS \cpshalf ExpressJS \cpshalf React Native \cpshalf JQuery \cpshalf Tailwind \cpshalf Bootstrap }}
 %
 \newcommand{\skillthree}{\createskill{Languages:}{\textbf{\emph{Native:}} Vietnamese \cpshalf \textbf{\emph{Other:}} English (Reading documents \& basic communication) }}
 %
@@ -54,7 +54,7 @@ I am excited to apply for a challenging and rewarding position that allows me to
 %
 \newcommand{\skillfive}{\createskill{Office:}{ Word \cpshalf Excel \cpshalf Powerpoint }}
 %
-\newcommand{\skillsix}{\createskill{Others:}{ Docker \cpshalf GIT \cpshalf Linux \cpshalf MongoDB \cpshalf SQL }}
+\newcommand{\skillsix}{\createskill{Others:}{ Docker \cpshalf GIT \cpshalf Linux \cpshalf MongoDB \cpshalf MySQL }}
 %
 \createskills{\skillone,\skilltwo,\skillthree,\skillfour,\skillfive,\skillsix}
 
@@ -64,9 +64,9 @@ I am excited to apply for a challenging and rewarding position that allows me to
 %
 \datedexperience{Noiz Music Player}{}
 \explanationdetail{\coloredbullet\ Git repo: \href{https://github.com/truonggiangit793/noiz-music}{https://github.com/truonggiangit793/noiz-music}}
-\explanationdetail{\coloredbullet\ Description: This is an entertainment website for music lovers. At Noiz Music, I believe that music is not just a form of entertainment but a way of life. Song library is based on the renowned ZingMp3 API, it's easy for you to discover new artists, create playlists, and share your favorite tracks with friends and family. Whether you're into pop, rock, hip hop, or classical music...}
+\explanationdetail{\coloredbullet\ Description: This is an entertainment website for music lovers. At Noiz Music, I believe that music is not just a form of entertainment but a way of life. Song library is based on the renowned ZingMp3 API, it's easy for you to discover new artists, create playlists, and share your favorite tracks with friends and family.}
 \explanationdetail{\coloredbullet\ Team size: only me.}
-\explanationdetail{\coloredbullet\ Technologies: Express.js for API, Vue.js for front-end, Docker.}
+\explanationdetail{\coloredbullet\ Technologies: ExpressJS for API, VueJS for front-end, Docker.}
 %
 \createfootnote{1/2}
 %
@@ -74,36 +74,29 @@ I am excited to apply for a challenging and rewarding position that allows me to
 %
 \section{Projects}
 %
-\datedexperience{Zing MP3 Clone}{}
-\explanationdetail{\coloredbullet\ Git repo: \href{https://github.com/truonggiangit793/zingmp3-clone}{https://github.com/truonggiangit793/zingmp3-clone}}
-\explanationdetail{\coloredbullet\ Description: ZingMp3 Web page cloned.}
-\explanationdetail{\coloredbullet\ Team size: only me.}
-\explanationdetail{\coloredbullet\ Technologies: Express.js for API, Vue.js for front-end, Docker.}
-%
 \datedexperience{Point of Sale - Store system}{}
 \explanationdetail{\coloredbullet\ Git repo: \href{https://github.com/truonggiangit793/store-system}{https://github.com/truonggiangit793/store-system}}
 \explanationdetail{\coloredbullet\ Description: This project explores the application of IT in retail business through the analysis and design of a retail store system. This innovative approach promises convenience, efficiency, and improved management, while enhancing our vocational skills and addressing common challenges.}
 \explanationdetail{\coloredbullet\ Team size: 2.}
 \explanationdetail{\coloredbullet\ My responsibilities: Developer, UI design, optimize code, bug fixing.}
-\explanationdetail{\coloredbullet\ Technologies: Express.js for API, Vue.js for front-end, MongoDB for database.}
+\explanationdetail{\coloredbullet\ Technologies: ExpressJS for back-end, VueJS for front-end, MongoDB for database.}
+%
+\datedexperience{Barcode scanner - Mobile application}{}
+\explanationdetail{\coloredbullet\ Git repo: \href{https://github.com/truonggiangit793/barcode-scanner-mobile-app}{https://github.com/truonggiangit793/barcode-scanner-mobile-app}}
+\explanationdetail{\coloredbullet\ Description: The application of barcode scanning in managing near-expiry products at convenience stores: Instead of manually recording barcode numbers, expiration dates, and quantities, our app allows employees to scan product barcodes using their phone's camera. The system displays the product information, and employees simply input expiration dates and quantities, saving time and eliminating the need for manual data entry. Additionally, store managers can easily download an Excel file without the tedious task of manually inputting data.}
+\explanationdetail{\coloredbullet\ Team size: only me.}
+\explanationdetail{\coloredbullet\ Technologies: ExpressJS for API, MongoDB for database, React Native for mobile app.}
 %
 \datedexperience{Facebook AI Chatbot - Webhook}{}
 \explanationdetail{\coloredbullet\ Git repo: \href{https://github.com/truonggiangit793/facebook-chatbot}{https://github.com/truonggiangit793/facebook-chatbot}}
 \explanationdetail{\coloredbullet\ Description: This project used for building a facebook chatbot. By providing OpenAI API key, this webhook can response any prompt by user then send the anwser to facebook via Messenger.}
 \explanationdetail{\coloredbullet\ Team size: only me.}
-\explanationdetail{\coloredbullet\ Technologies: Express.js for API, OpenAI API.}
+\explanationdetail{\coloredbullet\ Technologies: ExpressJS for API, OpenAI API.}
 %
 \datedexperience{Youtube clean mode - Chrome extension}{}
 \explanationdetail{\coloredbullet\ Git repo: \href{https://github.com/truonggiangit793/youtube-clean-mode-extension}{https://github.com/truonggiangit793/youtube-clean-mode-extension}}
 \explanationdetail{\coloredbullet\ Description: This extension allows users to customize their viewing experience by hiding certain elements of the page. Specifically, this extension offers the ability to hide the title of the current video, the controller, and suggested videos, as well as a theater mode that highlights the video frame by blurring the background.}
 \explanationdetail{\coloredbullet\ Team size: only me.}
-%
-\datedexperience{Barcode scanner - Mobile application}{}
-\explanationdetail{\coloredbullet\ Git repo for web dasboard: \href{https://github.com/truonggiangit793/mobile-admin-module}{https://github.com/truonggiangit793/mobile-admin-module}}
-\explanationdetail{\coloredbullet\ Git repo for React native: \href{https://github.com/truonggiangit793/mobile-app-final}{https://github.com/truonggiangit793/mobile-app-final}}
-\explanationdetail{\coloredbullet\ Description: The application of barcode scanning in managing near-expiry products at convenience stores: Instead of manually recording barcode numbers, expiration dates, and quantities, our app allows employees to scan product barcodes using their phone's camera. The system displays the product information, and employees simply input expiration dates and quantities, saving time and eliminating the need for manual data entry. Additionally, store managers can easily download an Excel file without the tedious task of manually inputting data.}
-\explanationdetail{\coloredbullet\ Team size: only me.}
-\explanationdetail{\coloredbullet\ Technologies: Express.js for API, MongoDB for database, React Native for mobile app.}
 %
 
 %Footnote
