--- a/cv.tex
+++ b/cv.tex
@@ -8,7 +8,7 @@
 \setmail{\textbf{Email:} truonggiangit793@gmail.com}
 \setposition{\textbf{Position:} Web developer} %ignored
 \setgithubaccount{https://github.com/truonggiangit793}
-\setfacebookaccount{https://fb.com/truonggiangit793}
+\setfacebookaccount{https://www.facebook.com/truonggiangit793}
 \setthemecolor{teal}
 
 \begin{document}
@@ -16,8 +16,8 @@
 \vspace{1ex}
 
 %Summary
-\addblocktext{Summary}{
-I am excited to apply for a challenging and rewarding position that allows me to apply my skills and knowledge in web developer. My experience is also in both web front-end and web back-end development, I possess a solid foundation in web development and a creative eye for designing visually appealing websites. I have actively sought opportunities to enhance my skills and stay up-to-date with the latest industry trends, and I am looking forward to the opportunity to contribute to an organization's success.
+\addblocktext{Objective}{
+I am excited to apply for a challenging and rewarding position that allows me to apply my skills and knowledge to become a professional programmer. I am a quick learner with the ability to adapt and apply new technologies to projects, and I am looking forward to the opportunity to contribute to an organization's success.
 }
 
 %Education
@@ -28,7 +28,7 @@ I am excited to apply for a challenging and rewarding position that allows me to
 \explanationdetail{\coloredbullet\ Major: Computer Networks and Data Communication}
   
 %Experience
-\section{Experience}
+\section{Activities}
 %
 \datedexperience{It help-desk volunteer}{August 2020 - March 2022}
 \explanation{Work at: VIETNAM FINLAND INTERNATIONAL SCHOOL (VFIS)}
@@ -44,7 +44,7 @@ I am excited to apply for a challenging and rewarding position that allows me to
 %Skills
 \section{Skills}
 %
-\newcommand{\skillone}{\createskill{Programming languages:}{ JavaScript \cpshalf Python \cpshalf PHP \cpshalf C\# \cpshalf Java }}
+\newcommand{\skillone}{\createskill{Programming languages:}{ JavaScript \cpshalf Python \cpshalf PHP \cpshalf Java }}
 %
 \newcommand{\skilltwo}{\createskill{Library \& Frameworks:}{ VueJS \cpshalf ReactJS \cpshalf ExpressJS \cpshalf React Native \cpshalf JQuery \cpshalf Tailwind \cpshalf Bootstrap }}
 %
@@ -52,21 +52,19 @@ I am excited to apply for a challenging and rewarding position that allows me to
 %
 \newcommand{\skillfour}{\createskill{Design:}{ Adobe Photoshop \cpshalf Adobe Illustrator \cpshalf Figma }}
 %
-\newcommand{\skillfive}{\createskill{Office:}{ Word \cpshalf Excel \cpshalf Powerpoint }}
+\newcommand{\skillfive}{\createskill{Others:}{ Docker \cpshalf GIT \cpshalf Linux \cpshalf MongoDB \cpshalf MySQL }}
 %
-\newcommand{\skillsix}{\createskill{Others:}{ Docker \cpshalf GIT \cpshalf Linux \cpshalf MongoDB \cpshalf MySQL }}
+\createskills{\skillone,\skilltwo,\skillthree,\skillfour,\skillfive}
 %
-\createskills{\skillone,\skilltwo,\skillthree,\skillfour,\skillfive,\skillsix}
-
-
 %Projects
 \section{Projects}
 %
 \datedexperience{Noiz Music Player}{}
-\explanationdetail{\coloredbullet\ Git repo: \href{https://github.com/truonggiangit793/noiz-music}{https://github.com/truonggiangit793/noiz-music}}
-\explanationdetail{\coloredbullet\ Description: This is an entertainment website for music lovers. At Noiz Music, I believe that music is not just a form of entertainment but a way of life. Song library is based on the renowned ZingMp3 API, it's easy for you to discover new artists, create playlists, and share your favorite tracks with friends and family.}
-\explanationdetail{\coloredbullet\ Team size: only me.}
-\explanationdetail{\coloredbullet\ Technologies: ExpressJS for API, VueJS for front-end, Docker.}
+\explanationdetail{\coloredbullet\ \textbf{\emph{Github repository:}} \href{https://github.com/truonggiangit793/noiz-music}{https://github.com/truonggiangit793/noiz-music}}
+\explanationdetail{\coloredbullet\ \textbf{\emph{Description:}} This is an entertainment website for music lovers. At Noiz Music, I believe that music is not just a form of entertainment but a way of life. Song library is based on the renowned ZingMp3 API, it's easy for you to discover new artists, create playlists, and share your favorite tracks with friends and family.}
+\explanationdetail{\coloredbullet\ \textbf{\emph{Team size:}} 1.}
+\explanationdetail{\coloredbullet\ \textbf{\emph{Technologies:}} ExpressJS for API, VueJS for front-end, Docker.}
+\explanationdetail{\coloredbullet\ \textbf{\emph{My responsibilities:}} Developer, UI design, optimize code, bug fixing.}
 %
 \createfootnote{1/2}
 %
@@ -75,28 +73,31 @@ I am excited to apply for a challenging and rewarding position that allows me to
 \section{Projects}
 %
 \datedexperience{Point of Sale - Store system}{}
-\explanationdetail{\coloredbullet\ Git repo: \href{https://github.com/truonggiangit793/store-system}{https://github.com/truonggiangit793/store-system}}
-\explanationdetail{\coloredbullet\ Description: This project explores the application of IT in retail business through the analysis and design of a retail store system. This innovative approach promises convenience, efficiency, and improved management, while enhancing our vocational skills and addressing common challenges.}
-\explanationdetail{\coloredbullet\ Team size: 2.}
-\explanationdetail{\coloredbullet\ My responsibilities: Developer, UI design, optimize code, bug fixing.}
-\explanationdetail{\coloredbullet\ Technologies: ExpressJS for back-end, VueJS for front-end, MongoDB for database.}
+\explanationdetail{\coloredbullet\ \textbf{\emph{Github repository:}} \href{https://github.com/truonggiangit793/store-system}{https://github.com/truonggiangit793/store-system}}
+\explanationdetail{\coloredbullet\ \textbf{\emph{Description:}} This project explores the application of IT in retail business through the analysis and design of a retail store system. This innovative approach promises convenience, efficiency, and improved management, while enhancing our vocational skills and addressing common challenges.}
+\explanationdetail{\coloredbullet\ \textbf{\emph{Team size:}} 2.}
+\explanationdetail{\coloredbullet\ \textbf{\emph{Technologies:}} ExpressJS for back-end, VueJS for front-end, MongoDB for database.}
+\explanationdetail{\coloredbullet\ \textbf{\emph{My responsibilities:}} Developer, UI design, optimize code, bug fixing.}
 %
 \datedexperience{Barcode scanner - Mobile application}{}
-\explanationdetail{\coloredbullet\ Git repo: \href{https://github.com/truonggiangit793/barcode-scanner-mobile-app}{https://github.com/truonggiangit793/barcode-scanner-mobile-app}}
-\explanationdetail{\coloredbullet\ Description: The application of barcode scanning in managing near-expiry products at convenience stores: Instead of manually recording barcode numbers, expiration dates, and quantities, our app allows employees to scan product barcodes using their phone's camera. The system displays the product information, and employees simply input expiration dates and quantities, saving time and eliminating the need for manual data entry. Additionally, store managers can easily download an Excel file without the tedious task of manually inputting data.}
-\explanationdetail{\coloredbullet\ Team size: only me.}
-\explanationdetail{\coloredbullet\ Technologies: ExpressJS for API, MongoDB for database, React Native for mobile app.}
+\explanationdetail{\coloredbullet\ \textbf{\emph{Github repository:}} \href{https://github.com/truonggiangit793/barcode-scanner-mobile-app}{https://github.com/truonggiangit793/barcode-scanner-mobile-app}}
+\explanationdetail{\coloredbullet\ \textbf{\emph{Description:}} The application of barcode scanning in managing near-expiry products at convenience stores: Instead of manually recording barcode numbers, expiration dates, and quantities, our app allows employees to scan product barcodes using their phone's camera. The system displays the product information, and employees simply input expiration dates and quantities, saving time and eliminating the need for manual data entry. Additionally, store managers can easily download an Excel file without the tedious task of manually inputting data.}
+\explanationdetail{\coloredbullet\ \textbf{\emph{Team size:}} 1.}
+\explanationdetail{\coloredbullet\ \textbf{\emph{Technologies:}} ExpressJS for API, MongoDB for database, React Native for mobile app.}
+\explanationdetail{\coloredbullet\ \textbf{\emph{My responsibilities:}} Developer, UI design, optimize code, bug fixing.}
 %
 \datedexperience{Facebook AI Chatbot - Webhook}{}
-\explanationdetail{\coloredbullet\ Git repo: \href{https://github.com/truonggiangit793/facebook-chatbot}{https://github.com/truonggiangit793/facebook-chatbot}}
-\explanationdetail{\coloredbullet\ Description: This project used for building a facebook chatbot. By providing OpenAI API key, this webhook can response any prompt by user then send the anwser to facebook via Messenger.}
-\explanationdetail{\coloredbullet\ Team size: only me.}
-\explanationdetail{\coloredbullet\ Technologies: ExpressJS for API, OpenAI API.}
+\explanationdetail{\coloredbullet\ \textbf{\emph{Github repository:}} \href{https://github.com/truonggiangit793/facebook-chatbot}{https://github.com/truonggiangit793/facebook-chatbot}}
+\explanationdetail{\coloredbullet\ \textbf{\emph{Description:}} This project used for building a facebook chatbot. By providing OpenAI API key, this webhook can response any prompt by user then send the anwser to facebook via Messenger.}
+\explanationdetail{\coloredbullet\ \textbf{\emph{Team size:}} 1.}
+\explanationdetail{\coloredbullet\ \textbf{\emph{Technologies:}} ExpressJS for API, OpenAI API.}
+\explanationdetail{\coloredbullet\ \textbf{\emph{My responsibilities:}} Developer, UI design, optimize code, bug fixing.}
 %
 \datedexperience{Youtube clean mode - Chrome extension}{}
-\explanationdetail{\coloredbullet\ Git repo: \href{https://github.com/truonggiangit793/youtube-clean-mode-extension}{https://github.com/truonggiangit793/youtube-clean-mode-extension}}
-\explanationdetail{\coloredbullet\ Description: This extension allows users to customize their viewing experience by hiding certain elements of the page. Specifically, this extension offers the ability to hide the title of the current video, the controller, and suggested videos, as well as a theater mode that highlights the video frame by blurring the background.}
-\explanationdetail{\coloredbullet\ Team size: only me.}
+\explanationdetail{\coloredbullet\ \textbf{\emph{Github repository:}} \href{https://github.com/truonggiangit793/youtube-clean-mode-extension}{https://github.com/truonggiangit793/youtube-clean-mode-extension}}
+\explanationdetail{\coloredbullet\ \textbf{\emph{Description:}} This extension allows users to customize their viewing experience by hiding certain elements of the page. Specifically, this extension offers the ability to hide the title of the current video, the controller, and suggested videos, as well as a theater mode that highlights the video frame by blurring the background.}
+\explanationdetail{\coloredbullet\ \textbf{\emph{Team size:}} 1.}
+\explanationdetail{\coloredbullet\ \textbf{\emph{My responsibilities:}} Developer, UI design, optimize code, bug fixing.}
 %
 
 %Footnote
