--- a/cv.tex
+++ b/cv.tex
@@ -6,9 +6,10 @@
 \setmobile{\textbf{Mobile:} +84 702 907 154}
 \setaddress{\textbf{Address:} District 7, HCM City}
 \setmail{\textbf{Email:} truonggiangit793@gmail.com}
-\setposition{\textbf{Position:} Web developer} %ignored
+\setposition{\emph{Be unique, be yourself!}} %ignored
 \setgithubaccount{https://github.com/truonggiangit793}
 \setfacebookaccount{https://www.facebook.com/truonggiangit793}
+\setlinkedinaccount{https://linkedin.com/in/truonggiangit793}
 \setthemecolor{teal}
 
 \begin{document}
@@ -16,29 +17,27 @@
 \vspace{1ex}
 
 %Summary
-\addblocktext{Objective}{
-I am excited to apply for a challenging and rewarding position that allows me to apply my skills and knowledge to become a professional programmer. I am a quick learner with the ability to adapt and apply new technologies to projects, and I am looking forward to the opportunity to contribute to an organization's success.
-}
+\addblocktext{Objective}{I am an enthusiastic and dedicated individual from Vietnam, eager to pursue a career as a professional programmer. With a natural aptitude for learning, I quickly grasp new concepts and adapt to emerging technologies. My ability to apply my knowledge to practical projects showcases my creativity and problem-solving skills. I am highly motivated to contribute to the success of an organization, valuing teamwork and collaboration.}
 
 %Education
 \section{Education} 
 %
 \datedexperience{Ton Duc Thang University}{October 2019 - Now} 
 \explanation{Bachelor of Information Technology} 
-\explanationdetail{\coloredbullet\ Major: Computer Networks and Data Communication}
+\explanationdetail{\coloredbullet\ Major: Computer Networks and Data Communication.}
   
 %Experience
 \section{Activities}
 %
-\datedexperience{It help-desk volunteer}{August 2020 - March 2022}
+\datedexperience{IT Help-desk Volunteer}{August 2020 - March 2022}
 \explanation{Work at: VIETNAM FINLAND INTERNATIONAL SCHOOL (VFIS)}
 \explanationdetail{\coloredbullet\ Give staff and student's parents a helping hand with computer and student portal problems.}
 \explanationdetail{\coloredbullet\ Check and keep computer rooms always in good maintained.} 
 \explanationdetail{\coloredbullet\ Recognition and Gains: Achievement recognition results of training evaluation.} 
 %
-\datedexperience{Photographer and Designer in media team}{October 2019 - November 2020} 
+\datedexperience{Designer}{October 2019 - November 2020} 
 \explanation{Work at: ALUMNI COMMITTEES ASSOCIATION (ACA) - TDTU} 
-\explanationdetail{\coloredbullet\ Work as a photographer and designer.}
+\explanationdetail{\coloredbullet\ Work as a photographer and designer in media team.}
 \explanationdetail{\coloredbullet\ Recognition and Gains: Achievement recognition results of training evaluation.}
     
 %Skills
@@ -52,9 +51,11 @@ I am excited to apply for a challenging and rewarding position that allows me to
 %
 \newcommand{\skillfour}{\createskill{Design:}{ Adobe Photoshop \cpshalf Adobe Illustrator \cpshalf Figma }}
 %
-\newcommand{\skillfive}{\createskill{Others:}{ Docker \cpshalf GIT \cpshalf Linux \cpshalf MongoDB \cpshalf MySQL }}
+\newcommand{\skillfive}{\createskill{Office:}{ Microsoft Word \cpshalf Microsoft Excel \cpshalf Microsoft PowerPoint }}
 %
-\createskills{\skillone,\skilltwo,\skillthree,\skillfour,\skillfive}
+\newcommand{\skillsix}{\createskill{Others:}{ Docker \cpshalf GIT \cpshalf Linux \cpshalf MongoDB \cpshalf MySQL }}
+%
+\createskills{\skillone,\skilltwo,\skillthree,\skillfour,\skillfive,\skillsix}
 %
 %Projects
 \section{Projects}
