--- a/cv.tex
+++ b/cv.tex
@@ -6,7 +6,7 @@
 \setmobile{\textbf{Mobile:} +84 702 907 154}
 \setaddress{\textbf{Address:} District 7, HCM City}
 \setmail{\textbf{Email:} truonggiangit793@gmail.com}
-\setposition{\emph{Be unique, be yourself!}} %ignored
+\setposition{\emph{Be unique, be yourself!}}
 \setgithubaccount{https://github.com/truonggiangit793}
 \setfacebookaccount{https://www.facebook.com/truonggiangit793}
 \setlinkedinaccount{https://linkedin.com/in/truonggiangit793}
@@ -82,14 +82,14 @@
 %
 \datedexperience{Barcode scanner - Mobile application}{}
 \explanationdetail{\coloredbullet\ \textbf{\emph{Github repository:}} \href{https://github.com/truonggiangit793/barcode-scanner-mobile-app}{https://github.com/truonggiangit793/barcode-scanner-mobile-app}}
-\explanationdetail{\coloredbullet\ \textbf{\emph{Description:}} The application of barcode scanning in managing near-expiry products at convenience stores: Instead of manually recording barcode numbers, expiration dates, and quantities, our app allows employees to scan product barcodes using their phone's camera. The system displays the product information, and employees simply input expiration dates and quantities, saving time and eliminating the need for manual data entry. Additionally, store managers can easily download an Excel file without the tedious task of manually inputting data.}
+\explanationdetail{\coloredbullet\ \textbf{\emph{Description:}} The application of barcode scanning in managing near-expiry products at convenience stores: Instead of manually recording barcode numbers, expiration dates, and quantities, my app allows employees to scan product barcode using their phone's camera. The system displays the product information, and employees simply input expiration dates and quantities, saving time and eliminating the need for manual data entry. Additionally, store managers can easily download an Excel file without the tedious task of manually inputting data.}
 \explanationdetail{\coloredbullet\ \textbf{\emph{Team size:}} 1.}
 \explanationdetail{\coloredbullet\ \textbf{\emph{Technologies:}} ExpressJS for API, MongoDB for database, React Native for mobile app.}
 \explanationdetail{\coloredbullet\ \textbf{\emph{My responsibilities:}} Developer, UI design, optimize code, bug fixing.}
 %
 \datedexperience{Facebook AI Chatbot - Webhook}{}
 \explanationdetail{\coloredbullet\ \textbf{\emph{Github repository:}} \href{https://github.com/truonggiangit793/facebook-chatbot}{https://github.com/truonggiangit793/facebook-chatbot}}
-\explanationdetail{\coloredbullet\ \textbf{\emph{Description:}} This project used for building a facebook chatbot. By providing OpenAI API key, this webhook can response any prompt by user then send the anwser to facebook via Messenger.}
+\explanationdetail{\coloredbullet\ \textbf{\emph{Description:}} This project used for building a facebook chatbot. By providing OpenAI API key, this webhook can response any prompt by user then send the answer to facebook via Messenger.}
 \explanationdetail{\coloredbullet\ \textbf{\emph{Team size:}} 1.}
 \explanationdetail{\coloredbullet\ \textbf{\emph{Technologies:}} ExpressJS for API, OpenAI API.}
 \explanationdetail{\coloredbullet\ \textbf{\emph{My responsibilities:}} Developer, UI design, optimize code, bug fixing.}
